hide additional button

--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
                             <span class="subheading">Welcome to Tutalum</span>
                             <h1 class="mb-4">Premier Quiz Publishing Pplatform</h1>
                             <p class="mb-4">Empower students and educators alike to effortlessly publish engaging quizzes with our top-rated platform, offering instant grading and detailed analytics for optimal learning outcomes.</p>
-                            <p><a href="index.html#" class="btn btn-primary p-4 py-3">Get Started Now! <span class="ion-ios-arrow-round-forward"></span></a> <a href="index.html#" class="btn btn-white p-4 py-3">View Course <span class="ion-ios-arrow-round-forward"></span></a></p>
+                            <p>
+                                <a href="index.html#" class="btn btn-primary p-4 py-3">Get Started Now! <span class="ion-ios-arrow-round-forward"></span></a>
+<!--                                <a href="index.html#" class="btn btn-white p-4 py-3">View Course <span class="ion-ios-arrow-round-forward"></span></a>-->
+                            </p>
                         </div>
                     </div>
                 </div>
