--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
                     <div class="row">
                         <div class="col-md-12 text-center">
                             <p class="mb-0" style="font-size: 14px;">
-                                Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | A platform created by <a href="https://centalabs.com/" target="_blank" rel="nofollow noopener" style="color: #e77b3c">Centalabs</a>
+                                Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | A platform created by <a href="https://centalabs.com/" target="_blank" rel="nofollow noopener" style="color: #e77b3c">Centalabs</a>
                             </p>
                         </div>
                     </div>
@@ -845,9 +845,7 @@
         <script src="js/tiny-slider.js"></script>
         <script src="js/glightbox.min.js"></script>
         <script src="js/aos.js"></script>
-        <script src="js/google-map.js"></script>
         <script src="js/main.js"></script>
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
