Tutor Agreement with Tutalum Platform - typo fix

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="col-lg-5">
                         <div class="text mt-5 pt-5" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
                             <span class="subheading">Welcome to Tutalum</span>
-                            <h1 class="mb-4">Premier Quiz Publishing Pplatform</h1>
+                            <h1 class="mb-4">Premier Quiz Publishing Platform</h1>
                             <p class="mb-4">Empower students and educators alike to effortlessly publish engaging quizzes with our top-rated platform, offering instant grading and detailed analytics for optimal learning outcomes.</p>
                             <p>
                                 <a href="index.html#" class="btn btn-primary p-4 py-3">Get Started Now! <span class="ion-ios-arrow-round-forward"></span></a>
