Tutor Agreement with Tutalum Platform - change all Quiz to Exam

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                     <div class="col-lg-5">
                         <div class="text mt-5 pt-5" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
                             <span class="subheading">Welcome to Tutalum</span>
-                            <h1 class="mb-4">Premier Quiz Publishing Platform</h1>
-                            <p class="mb-4">Empower students and educators alike to effortlessly publish engaging quizzes with our top-rated platform, offering instant grading and detailed analytics for optimal learning outcomes.</p>
+                            <h1 class="mb-4">Premier Exam Publishing Platform</h1>
+                            <p class="mb-4">Empower students and educators alike to effortlessly publish engaging exams with our top-rated platform, offering instant grading and detailed analytics for optimal learning outcomes.</p>
                             <p>
                                 <a href="index.html#" class="btn btn-primary p-4 py-3">Get Started Now! <span class="ion-ios-arrow-round-forward"></span></a>
 <!--                                <a href="index.html#" class="btn btn-white p-4 py-3">View Course <span class="ion-ios-arrow-round-forward"></span></a>-->
@@ -95,7 +95,7 @@
                                         </div>
                                         <div class="text">
                                             <h2>Engaging and Interactive Learning Experiences</h2>
-                                            <p class="mb-0">Keep students interested and involved with gamified quizzes, multimedia content, and customizable backgrounds.</p>
+                                            <p class="mb-0">Keep students interested and involved with gamified exams, multimedia content, and customizable backgrounds.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -106,7 +106,7 @@
                                         </div>
                                         <div class="text">
                                             <h2>Convenient Access Anywhere, Anytime</h2>
-                                            <p class="mb-0">Access quizzes and assessments from any device or location, ensuring you don't miss out on learning opportunities.</p>
+                                            <p class="mb-0">Access exams and assessments from any device or location, ensuring you don't miss out on learning opportunities.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -124,7 +124,7 @@
                                         <div class="icon"><span class="icon ri-a-b"><i class="sr-only">Phone</i></span></div>
                                         <div class="text">
                                             <h2>Efficient and Effective Exam Preparation</h2>
-                                            <p class="mb-0">Prepare for exams efficiently and effectively with practice quizzes, performance review, and progress tracking.</p>
+                                            <p class="mb-0">Prepare for exams efficiently and effectively with practice exams, performance review, and progress tracking.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -152,8 +152,8 @@
                                     <div class="services tutors d-flex">
                                         <div class="icon tutors"><span class="icon ri-pencil-line"><i class="sr-only">Learning</i></span></div>
                                         <div class="text">
-                                            <h2>Hassle-Free Quiz Creation</h2>
-                                            <p class="mb-0">Our platform provides a hassle-free quiz creation process, where our team creates quizzes for tutors based on their provided content.</p>
+                                            <h2>Hassle-Free Exam Creation</h2>
+                                            <p class="mb-0">Our platform provides a hassle-free exam creation process, where our team creates exam for tutors based on their provided content.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -161,8 +161,8 @@
                                     <div class="services tutors d-flex">
                                         <div class="icon tutors"><span class="icon ri-settings-3-line"><i class="sr-only">time</i></span></div>
                                         <div class="text">
-                                            <h2>Customizable Quiz Settings</h2>
-                                            <p class="mb-0">Customize quiz settings such as time limits, grading rules, and question types to match your teaching style and student needs.</p>
+                                            <h2>Customizable Exam Settings</h2>
+                                            <p class="mb-0">Customize exam settings such as time limits, grading rules, and question types to match your teaching style and student needs.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -180,7 +180,7 @@
                                         <div class="icon tutors"><span class="icon ri-medal-2-line"><i class="sr-only">Phone</i></span></div>
                                         <div class="text">
                                             <h2>Efficient Grading and Feedback</h2>
-                                            <p class="mb-0">Tutors can grade quizzes and assessments effortlessly, and provide detailed feedback to students for efficient learning and improvement.</p>
+                                            <p class="mb-0">Tutors can grade exams and assessments effortlessly, and provide detailed feedback to students for efficient learning and improvement.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -656,10 +656,10 @@
                                 <span class="price"><span class="number">Free</span></span>
                                 <div class="p-4 px-lg-5">
                                     <p>Access to all features and content on the platform</p>
-                                    <p>Unlimited quiz attempts</p>
+                                    <p>Unlimited exam attempts</p>
                                     <p>Immediate feedback and progress tracking</p>
                                     <p>Customizable study materials</p>
-                                    <p>Gamified quizzes and interactive learning experiences</p>
+                                    <p>Gamified exams and interactive learning experiences</p>
                                     <p>Access to a wide range of subjects and topics</p>
                                     <p>Compatible with all devices and browsers</p>
                                     <p>No ads or hidden fees</p>
@@ -676,10 +676,10 @@
                                 <div class="p-4 px-lg-5">
                                     <p>Custom pricing plans tailored to your needs</p>
                                     <p>Manage your tutor profile and showcase your expertise</p>
-                                    <p>Custom subdomain for hosting quizzes</p>
-                                    <p>Hassle-free quiz creation process with provided content</p>
-                                    <p>Control quiz participants for enhanced security</p>
-                                    <p>Add free quizzes to reach a wider audience</p>
+                                    <p>Custom subdomain for hosting exams</p>
+                                    <p>Hassle-free exam creation process with provided content</p>
+                                    <p>Control exam participants for enhanced security</p>
+                                    <p>Add free exams to reach a wider audience</p>
                                     <p>Comprehensive reporting and analytics for student performance</p>
                                     <p>Priority customer support for any questions or issues</p>
                                 </div>
@@ -747,7 +747,7 @@
                                     <img src="images/logo_3.svg" alt="logo">
                                 </a>
                             </h2>
-                            <p>Tutalum is a comprehensive online quiz publishing platform designed for students and tutors to create, share, and access quizzes and assessments.</p>
+                            <p>Tutalum is a comprehensive online exam publishing platform designed for students and tutors to create, share, and access exams and assessments.</p>
 <!--                            <ul class="ftco-footer-social list-unstyled mt-2">
                                 <li><a href="index.html#"><span class="fa fa-twitter"></span></a></li>
                                 <li><a href="index.html#"><span class="fa fa-facebook"></span></a></li>
