experiment open meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
     <head>
         <title>Tutalum - Learning Redefined</title>
         <meta charset="utf-8">
+        
+        <!-- Open Graph meta tags -->
+        <meta property="og:title" content="Tutalum - Learning Redefined" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://tutalum.com/" />
+        <meta property="og:image" content="https://tutalum.com/images/bg_3.jpg" />
+        <meta property="og:description" content="Empower students and educators alike to effortlessly publish engaging exams with our top-rated platform, offering instant grading and detailed analytics for optimal learning outcomes." />
+        <meta property="og:site_name" content="TUTALUM" />
+
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="shortcut icon" type="image/x-icon" href="images/fa-icon.png">
         <link rel="preconnect" href="https://fonts.gstatic.com">
